--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">安卓作业</string>
+    <string name="action_settings">设置</string>
     <string name="checker_name">入住人</string>
     <string name="phone_number">手机号</string>
     <string name="ID_number">入住人</string>
